# libstructure

./: .gitignore  .gitmodules  1.h  CMakeLists.txt  CMakeSettings.json  Mesh.h  README.md  main.cpp
VSBuild/x64-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
VSBuild/x64-Debug/libs/: cmake_install.cmake
VSBuild/x64-Debug/libs/TinyPly/: cmake_install.cmake
libs/: CMakeLists.txt
shaders/: simple.vs
